vprofile-project/kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
        - name: db
          image: vprocontainers/vprofiledb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: vpro-db-data
      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: vpropvc
