vprofile-project/kubedefs/mcdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcache-deployment
  labels:
    app: mc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mc
  template:
    metadata:
      labels:
        app: mc
    spec:
      containers:
        - name: mv
          image: memcached
          ports:
            - containerPort: 11211
