vprofile-project/kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcache-deployment
  labels:
    app: rb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rb
  template:
    metadata:
      labels:
        app: rb
    spec:
      containers:
        - name: rb
          image: rabbitmq
          ports:
            - containerPort: 5672
