vprofile-project/kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  labels:
    app: app
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
