vprofile-project/kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  selector:
    app: vprodb
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
