vprofile-project/kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
  labels:
    app: mc
spec:
  selector:
    app: mc
  type: ClusterIP
  ports:
    - port: 11211
      targetPort: 11211
