vprofile-project/kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
  labels:
    app: rb
spec:
  selector:
    app: rb
  type: ClusterIP
  ports:
    - port: 5672
      targetPort: 5672
